--- a/src/views/checkIn/checkDes.ejs
+++ b/src/views/checkIn/checkDes.ejs
@@ -199,7 +199,7 @@
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
                 </div>
-                <div data-v-106b99c8="" class="navbar-title"> Rule </div>
+                <div data-v-106b99c8="" class="navbar-title" data-lang="rule"> Rule </div>
                 <div data-v-106b99c8="" class="navbar-right" onclick="location.href='/keFuMenu'">
                     <div data-v-2973c506="" data-v-106b99c8="" class="c-row">
                         <i class="fa-fade fa center" style="color: #FFF">
@@ -211,48 +211,48 @@
             <div data-v-2973c506="" class="check-box">
                 <div data-v-2973c506="" class="list1 m-t-15">
                     <div data-v-2973c506="" class="hd c-row u-row-between">
-                        <div data-v-2973c506="" class="item">Target</div>
-                        <div data-v-2973c506="" class="item">Accumulated amount</div>
-                        <div data-v-2973c506="" class="item">Attendance Rewards</div>
+                        <div data-v-2973c506="" class="item" data-lang="recharge">Target</div>
+                        <div data-v-2973c506="" class="item" data-lang="ruleAcount">Accumulated amount</div>
+                        <div data-v-2973c506="" class="item" data-lang="ruleBonus">Attendance Rewards</div>
                     </div>
                     <div data-v-2973c506="" class="bd c-row u-row-between">
-                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt">Total charge</span>
+                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt" data-lang="depositMoney">Total charge</span>
                         </div>
                         <div data-v-2973c506="" class="item">300</div>
                         <div data-v-2973c506="" class="item">20</div>
                     </div>
                     <div data-v-2973c506="" class="bd c-row u-row-between">
-                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt">Total charge</span>
+                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt" data-lang="depositMoney">Total charge</span>
                         </div>
                         <div data-v-2973c506="" class="item">3000</div>
                         <div data-v-2973c506="" class="item">50</div>
                     </div>
                     <div data-v-2973c506="" class="bd c-row u-row-between">
-                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt">Total charge</span>
+                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt" data-lang="depositMoney">Total charge</span>
                         </div>
                         <div data-v-2973c506="" class="item">6000</div>
                         <div data-v-2973c506="" class="item">150</div>
                     </div>
                     <div data-v-2973c506="" class="bd c-row u-row-between">
-                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt">Total charge</span>
+                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt" data-lang="depositMoney">Total charge</span>
                         </div>
                         <div data-v-2973c506="" class="item">12000</div>
                         <div data-v-2973c506="" class="item">350</div>
                     </div>
                     <div data-v-2973c506="" class="bd c-row u-row-between">
-                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt">Total charge</span>
+                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt" data-lang="depositMoney">Total charge</span>
                         </div>
                         <div data-v-2973c506="" class="item">28000</div>
                         <div data-v-2973c506="" class="item">850</div>
                     </div>
                     <div data-v-2973c506="" class="bd c-row u-row-between">
-                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt">Total charge</span>
+                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt" data-lang="depositMoney">Total charge</span>
                         </div>
                         <div data-v-2973c506="" class="item">100000</div>
                         <div data-v-2973c506="" class="item">5000</div>
                     </div>
                     <div data-v-2973c506="" class="bd c-row u-row-between">
-                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt">Total charge</span>
+                        <div data-v-2973c506="" class="item"><span data-v-2973c506="" class="txt" data-lang="depositMoney">Total charge</span>
                         </div>
                         <div data-v-2973c506="" class="item">2000000</div>
                         <div data-v-2973c506="" class="item">18050</div>
@@ -262,14 +262,14 @@
                     <div data-v-2973c506="" class="con m-b-5">
                         <!-- <span data-v-2973c506="" class="yuan"></span>Continuous point
                         name , without interruption;</div> -->
-                        <div data-v-2973c506="" class="con m-b-5"><span data-v-2973c506="" class="yuan"></span>During
+                        <div data-v-2973c506="" class="con m-b-5" data-lang="desc2"><span data-v-2973c506="" class="yuan"></span>During
                             the operation period, please check once a day.</div>
-                        <div data-v-2973c506="" class="con m-b-5"><span data-v-2973c506="" class="yuan"></span>Players
+                        <div data-v-2973c506="" class="con m-b-5" data-lang="desc3"><span data-v-2973c506="" class="yuan"></span>Players
                             with no deposit history will not be able to claim the bonus.</div>
-                        <div data-v-2973c506="" class="con m-b-5"><span data-v-2973c506="" class="yuan"></span>From day
+                        <div data-v-2973c506="" class="con m-b-5" data-lang="desc4"><span data-v-2973c506="" class="yuan"></span>From day
                             1
                             onwards, the deposit requirements must be met.</div>
-                        <div data-v-2973c506="" class="con m-b-5"><span data-v-2973c506="" class="yuan"></span>The
+                        <div data-v-2973c506="" class="con m-b-5" data-lang="desc5"><span data-v-2973c506="" class="yuan"></span>The
                             platform has
                             Final rights to explain this operation. If you have any related questions, please contact
                             customer service.</div>
@@ -301,6 +301,28 @@
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="/js/client.js"></script>
+        <script >
+            $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            setTimeout(() => {
+              $.each(data, function(key,valueObj){
+                console.log(key);
+                $("[data-lang="+key+"]").text(valueObj);
+              });
+           }, 1000); 
+          }
+        </script>
 </body>
 
 </html>
