--- a/src/views/checkIn/checkIn.ejs
+++ b/src/views/checkIn/checkIn.ejs
@@ -51,7 +51,7 @@
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
                 </div>
-                <div data-v-106b99c8="" class="navbar-title"> Rewards </div>
+                <div data-v-106b99c8="" class="navbar-title" data-lang="awardAmount"> Rewards </div>
                 <div data-v-106b99c8="" class="navbar-right" onclick="location.href='/keFuMenu'">
                     <div data-v-11ffe290="" data-v-106b99c8="" class="c-row">
                         <i class="fa-fade fa center" style="color: #FFF">
@@ -62,7 +62,7 @@
             </div>
             <div data-v-11ffe290="" class="check-box">
                 <div data-v-11ffe290="" class="check-header c-tc">
-                    <h4 data-v-11ffe290="" class="tit m-b-5">7 Days Recharge Rewards</h4>
+                    <h4 data-v-11ffe290="" class="tit m-b-5" data-lang="binguoLastIssue">7 Days Recharge Rewards</h4>
                     <!-- <div data-v-11ffe290="" class="tit c-tc c-row c-row-middle-center">
                         <div data-v-11ffe290="" class="frequency c-row c-row-middle"> Receive: <p data-v-11ffe290=""
                                 class="c-row">Day<span data-v-11ffe290="" class="num">0</span></p>
@@ -70,8 +70,8 @@
                     </div> -->
                     <div data-v-11ffe290="" class="c-row c-row-middle-center p-l-20 p-r-20">
                         <div data-v-11ffe290="">
-                            <p data-v-11ffe290="" class="txt" onclick="location.href='/checkDes'">Rule</p>
-                            <p data-v-11ffe290="" class="txt" onclick="location.href='/checkRecord'">Registration
+                            <p data-v-11ffe290="" class="txt" onclick="location.href='/checkDes'" data-lang="rule">Rule</p>
+                            <p data-v-11ffe290="" class="txt" onclick="location.href='/checkRecord'" data-lang="heroDirectSub">Registration
                                 Profile</p>
                         </div>
                     </div>
@@ -81,49 +81,49 @@
                         <!---->
                         <div data-v-11ffe290="" class="num c-row c-row-middle c-row-center">₹&nbsp;<span
                                 data-v-11ffe290="" class="des"> 20</span></div><img data-v-11ffe290=""
-                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt">Get it now</span>
+                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt" data-lang="receive">Get it now</span>
                         <!---->
                     </div>
                     <div data-v-11ffe290="" data-dpr="2" class="item action">
                         <!---->
                         <div data-v-11ffe290="" class="num c-row c-row-middle c-row-center">₹&nbsp; <span
                                 data-v-11ffe290="" class="des">50</span></div><img data-v-11ffe290=""
-                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt">Get it now</span>
+                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt" data-lang="receive">Get it now</span>
                         <!---->
                     </div>
                     <div data-v-11ffe290="" data-dpr="3" class="item action">
                         <!---->
                         <div data-v-11ffe290="" class="num c-row c-row-middle c-row-center"> ₹&nbsp;<span
                                 data-v-11ffe290="" class="des">150</span></div><img data-v-11ffe290=""
-                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt">Get it now</span>
+                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt" data-lang="receive">Get it now</span>
                         <!---->
                     </div>
                     <div data-v-11ffe290="" data-dpr="4" class="item action">
                         <!---->
                         <div data-v-11ffe290="" class="num c-row c-row-middle c-row-center"> ₹&nbsp;<span
                                 data-v-11ffe290="" class="des">350</span></div><img data-v-11ffe290=""
-                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt">Get it now</span>
+                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt" data-lang="receive">Get it now</span>
                         <!---->
                     </div>
                     <div data-v-11ffe290="" data-dpr="5" class="item action">
                         <!---->
                         <div data-v-11ffe290="" class="num c-row c-row-middle c-row-center"> ₹&nbsp;<span
                                 data-v-11ffe290="" class="des">850</span></div><img data-v-11ffe290=""
-                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt">Get it now</span>
+                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt" data-lang="receive">Get it now</span>
                         <!---->
                     </div>
                     <div data-v-11ffe290="" data-dpr="6" class="item action">
                         <!---->
                         <div data-v-11ffe290="" class="num c-row c-row-middle c-row-center"> ₹&nbsp;<span
                                 data-v-11ffe290="" class="des">5000</span></div><img data-v-11ffe290=""
-                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt">Get it now</span>
+                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt" data-lang="receive">Get it now</span>
                         <!---->
                     </div>
                     <div data-v-11ffe290="" data-dpr="7" class="item action">
                         <!---->
                         <div data-v-11ffe290="" class="num c-row c-row-middle c-row-center"> ₹&nbsp;<span
                                 data-v-11ffe290="" class="des">18050</span></div><img data-v-11ffe290=""
-                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt">Get it now</span>
+                            src="/images/tu.webp" class="img"><span data-v-11ffe290="" class="txt" data-lang="receive">Get it now</span>
                         <!---->
                     </div>
                 </div>
@@ -244,6 +244,28 @@
         $(window).on('load', function () {
             $('.Loading').fadeOut(0);
         });
+
+        $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            setTimeout(() => {
+              $.each(data, function(key,valueObj){
+                console.log(key);
+                $("[data-lang="+key+"]").text(valueObj);
+              });
+           }, 1000); 
+          }
+
     </script>
 </body>
 
