--- a/src/views/wallet/recharge.ejs
+++ b/src/views/wallet/recharge.ejs
@@ -140,7 +140,7 @@
                     <!-- Payment Methods Options -->
                     <div data-v-67caa467="" class="list c-row c-flex-warp m-t-10" id="payment_methods_options">
                         <div data-v-67caa467="" class="item action" type="manual_pay">
-                            <img data-v-67caa467="" width="30px" height="30px" src="/images/recharge_TRANSFER.png"
+                            <img data-v-67caa467="" width="30px" height="30px" src="/images/recharge_TRANSFER_red.webp"
                                 class="img">
                             <div data-v-67caa467="" class="name">UPI-QR</div>
 
